[tool.poetry]
name = "ai-in-education-analysis"
version = "0.1.0"
description = ""
authors = ["danield2255 <danield2255@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.39.3"
ipykernel = "^7.2.0"
jupyter = "^1.1.1"
seaborn = "^0.13.2"
pyarrow = "^23.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
